ethereumj-core/src/main/java/samples/antlr/SampleParser.java
// $ANTLR 3.5.2 E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g 2014-04-27 11:25:21

  package samples.antlr;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
/*******************************************************************************
 * Copyright (c) 2009 Scott Stanchfield
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *******************************************************************************/
@SuppressWarnings("all")
public class SampleParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHAR_LITERAL", "COMMENT", "DIGIT", 
		"IDENT", "INTEGER", "LETTER", "MULTILINE_COMMENT", "STRING_LITERAL", "WS", 
		"'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'..'", "'/'", "'/='", 
		"':'", "':='", "';'", "'<'", "'<='", "'='", "'>'", "'>='", "'Boolean'", 
		"'Char'", "'Integer'", "'String'", "'['", "']'", "'and'", "'array'", "'begin'", 
		"'constant'", "'else'", "'elsif'", "'end'", "'exit'", "'function'", "'if'", 
		"'loop'", "'mod'", "'not'", "'of'", "'or'", "'procedure'", "'program'", 
		"'record'", "'return'", "'then'", "'type'", "'var'", "'when'", "'while'"
	};
	public static final int EOF=-1;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int CHAR_LITERAL=4;
	public static final int COMMENT=5;
	public static final int DIGIT=6;
	public static final int IDENT=7;
	public static final int INTEGER=8;
	public static final int LETTER=9;
	public static final int MULTILINE_COMMENT=10;
	public static final int STRING_LITERAL=11;
	public static final int WS=12;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public SampleParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public SampleParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected StringTemplateGroup templateLib =
	  new StringTemplateGroup("SampleParserTemplates", AngleBracketTemplateLexer.class);

	public void setTemplateLib(StringTemplateGroup templateLib) {
	  this.templateLib = templateLib;
	}
	public StringTemplateGroup getTemplateLib() {
	  return templateLib;
	}
	/** allows convenient multi-value initialization:
	 *  "new STAttrMap().put(...).put(...)"
	 */
	@SuppressWarnings("serial")
	public static class STAttrMap extends HashMap<String, Object> {
		public STAttrMap put(String attrName, Object value) {
			super.put(attrName, value);
			return this;
		}
	}
	@Override public String[] getTokenNames() { return SampleParser.tokenNames; }
	@Override public String getGrammarFileName() { return "E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g"; }


	public static class program_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "program"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:24:1: program : 'program' IDENT '=' ( constant | variable | function | procedure | typeDecl )* 'begin' ( statement )* 'end' IDENT '.' ;
	public final program_return program() throws RecognitionException {
		program_return retval = new program_return();
		retval.start = input.LT(1);

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:25:2: ( 'program' IDENT '=' ( constant | variable | function | procedure | typeDecl )* 'begin' ( statement )* 'end' IDENT '.' )
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:25:4: 'program' IDENT '=' ( constant | variable | function | procedure | typeDecl )* 'begin' ( statement )* 'end' IDENT '.'
			{
			match(input,53,FOLLOW_53_in_program58); 
			match(input,IDENT,FOLLOW_IDENT_in_program60); 
			match(input,28,FOLLOW_28_in_program62); 
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:26:3: ( constant | variable | function | procedure | typeDecl )*
			loop1:
			while (true) {
				int alt1=6;
				switch ( input.LA(1) ) {
				case 40:
					{
					alt1=1;
					}
					break;
				case 58:
					{
					alt1=2;
					}
					break;
				case 45:
					{
					alt1=3;
					}
					break;
				case 52:
					{
					alt1=4;
					}
					break;
				case 57:
					{
					alt1=5;
					}
					break;
				}
				switch (alt1) {
				case 1 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:26:4: constant
					{
					pushFollow(FOLLOW_constant_in_program67);
					constant();
					state._fsp--;

					}
					break;
				case 2 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:26:15: variable
					{
					pushFollow(FOLLOW_variable_in_program71);
					variable();
					state._fsp--;

					}
					break;
				case 3 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:26:26: function
					{
					pushFollow(FOLLOW_function_in_program75);
					function();
					state._fsp--;

					}
					break;
				case 4 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:26:37: procedure
					{
					pushFollow(FOLLOW_procedure_in_program79);
					procedure();
					state._fsp--;

					}
					break;
				case 5 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:26:49: typeDecl
					{
					pushFollow(FOLLOW_typeDecl_in_program83);
					typeDecl();
					state._fsp--;

					}
					break;

				default :
					break loop1;
				}
			}

			match(input,39,FOLLOW_39_in_program89); 
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:28:3: ( statement )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==IDENT||(LA2_0 >= 46 && LA2_0 <= 47)||LA2_0==60) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:28:3: statement
					{
					pushFollow(FOLLOW_statement_in_program93);
					statement();
					state._fsp--;

					}
					break;

				default :
					break loop2;
				}
			}

			match(input,43,FOLLOW_43_in_program98); 
			match(input,IDENT,FOLLOW_IDENT_in_program100); 
			match(input,19,FOLLOW_19_in_program102); 
			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class constant_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "constant"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:32:1: constant : 'constant' IDENT ':' type ':=' expression ';' ;
	public final constant_return constant() throws RecognitionException {
		constant_return retval = new constant_return();
		retval.start = input.LT(1);

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:33:2: ( 'constant' IDENT ':' type ':=' expression ';' )
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:33:4: 'constant' IDENT ':' type ':=' expression ';'
			{
			match(input,40,FOLLOW_40_in_constant113); 
			match(input,IDENT,FOLLOW_IDENT_in_constant115); 
			match(input,23,FOLLOW_23_in_constant117); 
			pushFollow(FOLLOW_type_in_constant119);
			type();
			state._fsp--;

			match(input,24,FOLLOW_24_in_constant121); 
			pushFollow(FOLLOW_expression_in_constant123);
			expression();
			state._fsp--;

			match(input,25,FOLLOW_25_in_constant125); 
			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "constant"


	public static class variable_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "variable"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:36:1: variable : 'var' IDENT ( ',' IDENT )* ':' type ( ':=' expression )? ';' ;
	public final variable_return variable() throws RecognitionException {
		variable_return retval = new variable_return();
		retval.start = input.LT(1);

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:37:2: ( 'var' IDENT ( ',' IDENT )* ':' type ( ':=' expression )? ';' )
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:37:4: 'var' IDENT ( ',' IDENT )* ':' type ( ':=' expression )? ';'
			{
			match(input,58,FOLLOW_58_in_variable136); 
			match(input,IDENT,FOLLOW_IDENT_in_variable138); 
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:37:16: ( ',' IDENT )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==17) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:37:17: ',' IDENT
					{
					match(input,17,FOLLOW_17_in_variable141); 
					match(input,IDENT,FOLLOW_IDENT_in_variable143); 
					}
					break;

				default :
					break loop3;
				}
			}

			match(input,23,FOLLOW_23_in_variable147); 
			pushFollow(FOLLOW_type_in_variable149);
			type();
			state._fsp--;

			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:37:38: ( ':=' expression )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==24) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:37:39: ':=' expression
					{
					match(input,24,FOLLOW_24_in_variable152); 
					pushFollow(FOLLOW_expression_in_variable154);
					expression();
					state._fsp--;

					}
					break;

			}

			match(input,25,FOLLOW_25_in_variable158); 
			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "variable"


	public static class type_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "type"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:40:1: type : ( 'Integer' | 'Boolean' | 'String' | 'Char' | IDENT | typeSpec );
	public final type_return type() throws RecognitionException {
		type_return retval = new type_return();
		retval.start = input.LT(1);

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:41:2: ( 'Integer' | 'Boolean' | 'String' | 'Char' | IDENT | typeSpec )
			int alt5=6;
			switch ( input.LA(1) ) {
			case 33:
				{
				alt5=1;
				}
				break;
			case 31:
				{
				alt5=2;
				}
				break;
			case 34:
				{
				alt5=3;
				}
				break;
			case 32:
				{
				alt5=4;
				}
				break;
			case IDENT:
				{
				alt5=5;
				}
				break;
			case 26:
			case 38:
			case 54:
				{
				alt5=6;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:41:4: 'Integer'
					{
					match(input,33,FOLLOW_33_in_type169); 
					}
					break;
				case 2 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:42:4: 'Boolean'
					{
					match(input,31,FOLLOW_31_in_type174); 
					}
					break;
				case 3 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:43:4: 'String'
					{
					match(input,34,FOLLOW_34_in_type179); 
					}
					break;
				case 4 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:44:4: 'Char'
					{
					match(input,32,FOLLOW_32_in_type184); 
					}
					break;
				case 5 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:45:4: IDENT
					{
					match(input,IDENT,FOLLOW_IDENT_in_type189); 
					}
					break;
				case 6 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:46:4: typeSpec
					{
					pushFollow(FOLLOW_typeSpec_in_type194);
					typeSpec();
					state._fsp--;

					}
					break;

			}
			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "type"


	public static class typeDecl_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "typeDecl"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:49:1: typeDecl : 'type' IDENT '=' typeSpec ';' ;
	public final typeDecl_return typeDecl() throws RecognitionException {
		typeDecl_return retval = new typeDecl_return();
		retval.start = input.LT(1);

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:50:2: ( 'type' IDENT '=' typeSpec ';' )
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:50:4: 'type' IDENT '=' typeSpec ';'
			{
			match(input,57,FOLLOW_57_in_typeDecl205); 
			match(input,IDENT,FOLLOW_IDENT_in_typeDecl207); 
			match(input,28,FOLLOW_28_in_typeDecl209); 
			pushFollow(FOLLOW_typeSpec_in_typeDecl211);
			typeSpec();
			state._fsp--;

			match(input,25,FOLLOW_25_in_typeDecl213); 
			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "typeDecl"


	public static class typeSpec_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "typeSpec"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:53:1: typeSpec : ( arrayType | recordType | enumType );
	public final typeSpec_return typeSpec() throws RecognitionException {
		typeSpec_return retval = new typeSpec_return();
		retval.start = input.LT(1);

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:54:2: ( arrayType | recordType | enumType )
			int alt6=3;
			switch ( input.LA(1) ) {
			case 38:
				{
				alt6=1;
				}
				break;
			case 54:
				{
				alt6=2;
				}
				break;
			case 26:
				{
				alt6=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
			switch (alt6) {
				case 1 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:54:4: arrayType
					{
					pushFollow(FOLLOW_arrayType_in_typeSpec224);
					arrayType();
					state._fsp--;

					}
					break;
				case 2 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:55:4: recordType
					{
					pushFollow(FOLLOW_recordType_in_typeSpec229);
					recordType();
					state._fsp--;

					}
					break;
				case 3 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:56:4: enumType
					{
					pushFollow(FOLLOW_enumType_in_typeSpec234);
					enumType();
					state._fsp--;

					}
					break;

			}
			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "typeSpec"


	public static class arrayType_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "arrayType"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:59:1: arrayType : 'array' '[' INTEGER '..' INTEGER ']' 'of' type ;
	public final arrayType_return arrayType() throws RecognitionException {
		arrayType_return retval = new arrayType_return();
		retval.start = input.LT(1);

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:60:2: ( 'array' '[' INTEGER '..' INTEGER ']' 'of' type )
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:60:4: 'array' '[' INTEGER '..' INTEGER ']' 'of' type
			{
			match(input,38,FOLLOW_38_in_arrayType245); 
			match(input,35,FOLLOW_35_in_arrayType247); 
			match(input,INTEGER,FOLLOW_INTEGER_in_arrayType249); 
			match(input,20,FOLLOW_20_in_arrayType251); 
			match(input,INTEGER,FOLLOW_INTEGER_in_arrayType253); 
			match(input,36,FOLLOW_36_in_arrayType255); 
			match(input,50,FOLLOW_50_in_arrayType257); 
			pushFollow(FOLLOW_type_in_arrayType259);
			type();
			state._fsp--;

			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "arrayType"


	public static class recordType_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "recordType"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:63:1: recordType : 'record' ( field )* 'end' 'record' ;
	public final recordType_return recordType() throws RecognitionException {
		recordType_return retval = new recordType_return();
		retval.start = input.LT(1);

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:64:2: ( 'record' ( field )* 'end' 'record' )
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:64:4: 'record' ( field )* 'end' 'record'
			{
			match(input,54,FOLLOW_54_in_recordType270); 
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:64:13: ( field )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==IDENT) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:64:13: field
					{
					pushFollow(FOLLOW_field_in_recordType272);
					field();
					state._fsp--;

					}
					break;

				default :
					break loop7;
				}
			}

			match(input,43,FOLLOW_43_in_recordType275); 
			match(input,54,FOLLOW_54_in_recordType277); 
			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "recordType"


	public static class field_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "field"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:67:1: field : IDENT ':' type ';' ;
	public final field_return field() throws RecognitionException {
		field_return retval = new field_return();
		retval.start = input.LT(1);

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:68:2: ( IDENT ':' type ';' )
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:68:4: IDENT ':' type ';'
			{
			match(input,IDENT,FOLLOW_IDENT_in_field288); 
			match(input,23,FOLLOW_23_in_field290); 
			pushFollow(FOLLOW_type_in_field292);
			type();
			state._fsp--;

			match(input,25,FOLLOW_25_in_field294); 
			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "field"


	public static class enumType_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "enumType"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:71:1: enumType : '<' IDENT ( ',' IDENT )* '>' ;
	public final enumType_return enumType() throws RecognitionException {
		enumType_return retval = new enumType_return();
		retval.start = input.LT(1);

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:72:2: ( '<' IDENT ( ',' IDENT )* '>' )
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:72:4: '<' IDENT ( ',' IDENT )* '>'
			{
			match(input,26,FOLLOW_26_in_enumType305); 
			match(input,IDENT,FOLLOW_IDENT_in_enumType307); 
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:72:14: ( ',' IDENT )*
			loop8:
			while (true) {
				int alt8=2;
				int LA8_0 = input.LA(1);
				if ( (LA8_0==17) ) {
					alt8=1;
				}

				switch (alt8) {
				case 1 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:72:15: ',' IDENT
					{
					match(input,17,FOLLOW_17_in_enumType310); 
					match(input,IDENT,FOLLOW_IDENT_in_enumType312); 
					}
					break;

				default :
					break loop8;
				}
			}

			match(input,29,FOLLOW_29_in_enumType316); 
			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "enumType"


	public static class statement_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "statement"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:75:1: statement : ( assignmentStatement | ifStatement | loopStatement | whileStatement | procedureCallStatement );
	public final statement_return statement() throws RecognitionException {
		statement_return retval = new statement_return();
		retval.start = input.LT(1);

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:76:2: ( assignmentStatement | ifStatement | loopStatement | whileStatement | procedureCallStatement )
			int alt9=5;
			switch ( input.LA(1) ) {
			case IDENT:
				{
				int LA9_1 = input.LA(2);
				if ( (LA9_1==24) ) {
					alt9=1;
				}
				else if ( (LA9_1==13) ) {
					alt9=5;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 9, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 46:
				{
				alt9=2;
				}
				break;
			case 47:
				{
				alt9=3;
				}
				break;
			case 60:
				{
				alt9=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 9, 0, input);
				throw nvae;
			}
			switch (alt9) {
				case 1 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:76:4: assignmentStatement
					{
					pushFollow(FOLLOW_assignmentStatement_in_statement327);
					assignmentStatement();
					state._fsp--;

					}
					break;
				case 2 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:77:4: ifStatement
					{
					pushFollow(FOLLOW_ifStatement_in_statement332);
					ifStatement();
					state._fsp--;

					}
					break;
				case 3 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:78:4: loopStatement
					{
					pushFollow(FOLLOW_loopStatement_in_statement337);
					loopStatement();
					state._fsp--;

					}
					break;
				case 4 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:79:4: whileStatement
					{
					pushFollow(FOLLOW_whileStatement_in_statement342);
					whileStatement();
					state._fsp--;

					}
					break;
				case 5 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\antlr\\Sample.g:80:4: procedureCallStatement
					{
					pushFollow(FOLLOW_procedureCallStatement_in_statement347);
					procedureCallStatement();
					state._fsp--;

					}
					break;

			}
			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statement"


	public static class procedureCallStatement_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};

